# wave

./: README.md  license.txt
licenses/chargemode/: Makefile
licenses/kern-tools-native/: kgit
licenses/keydet/: Makefile
licenses/machine-image-apq8009-20170628034305/: license.manifest  package.manifest
licenses/machine-recovery-image-apq8009-20170628042857/: license.manifest  package.manifest
licenses/mtd-utils-native/: common.h
licenses/opkg-utils-native/: opkg.py
licenses/sgml-common-native/: LICENSE-GPLv2
wave-platform/android_compat/device/qcom/common/: releasetools.py
wave-platform/android_compat/device/qcom/msm8909/: WCNSS_qcom_cfg.ini  mixer_paths_msm8909_pm8916.xml  msm8909.mk
wave-platform/android_compat/device/qcom/msm8937/: AndroidBoard.mk  AndroidProducts.mk  BoardConfig.mk  fstab.qcom  init.target.rc  msm8937_64.mk  system.prop
wave-platform/bootable/bootloader/edk2/: Maintainers.txt  edksetup.bat
wave-platform/bootable/recovery/: Android.mk  Makefile.am  bootloader.cpp  common.h  configure.ac  fuse_sdcard_provider.c  fuse_sideload.c  fuse_sideload.h  install.cpp  recovery.cpp  roots.cpp  screen_ui.cpp  ui.cpp  ui.h  verifier.cpp
wave-platform/bootable/recovery/applypatch/: Makefile.am  applypatch.c  bspatch.c  imgpatch.c
wave-platform/bootable/recovery/edify/: Makefile.am
wave-platform/bootable/recovery/etc/: init.rc
wave-platform/bootable/recovery/minadbd/: Makefile.am
wave-platform/bootable/recovery/minzip/: Makefile.am  Zip.c
wave-platform/bootable/recovery/mtdutils/: Makefile.am  mtdutils.c
wave-platform/bootable/recovery/updater/: Makefile.am  install.c  install.h  updater.c  updater.h
wave-platform/data-ipa-cfg-mgr/ipacm/inc/: IPACM_Defs.h
wave-platform/data-ipa-cfg-mgr/ipacm/src/: IPACM_Wan.cpp
wave-platform/filesystems/mtd-utils/: Android.mk  Makefile
wave-platform/filesystems/mtd-utils/mkfs.ubifs/: compr.c  devtable.c  mkfs.ubifs.c  mkfs.ubifs.h
wave-platform/filesystems/mtd-utils/ubi-utils/: libubi.c  libubigen.c  mtdinfo.c  ubi-fastmap.c  ubiformat.c  ubinize.c
wave-platform/frameworks/: NOTICE
wave-platform/frameworks/av/camera/: Makefile.am
wave-platform/frameworks/native/: configure.ac
wave-platform/hardware/qcom/sensors/: Android.mk  README.md
wave-platform/kernel/msm-3.18/drivers/: Makefile
wave-platform/mdm-init/: Makefile.am  configure.ac
wave-platform/mdm-init/wlan/: Makefile.am  WCNSS_qcom_cfg.ini  WCNSS_qcom_cfg.sdio.ini
wave-platform/mdm-init/wlan_apq8009_drone/: WCNSS_qcom_cfg.ini  wlan
wave-platform/mdm-init/wlan_apq8096_drone/: wlan
wave-platform/mdm-init/wlan_pronto/: WCNSS_qcom_cfg.ini  hostapd-wlan1.conf  wlan  wpa_supplicant.conf
wave-platform/mdm-init/wlan_sdio/: WCNSS_qcom_cfg.ini
wave-platform/mdm-ss-mgr/init_mss/: Makefile.am  configure.ac  init_mss.c
wave-platform/poky/meta-qti-bsp/classes/: androidmk_base.bbclass  buildname.bbclass  qperf.bbclass
wave-platform/poky/meta-qti-bsp/conf/: conf-notes.txt  layer.conf  site.conf
wave-platform/qcom-opensource/bt/bt-app/: configure.ac
wave-platform/shortcut-fe/shortcut-fe/: Makefile  sfe.h  sfe_cm.c  sfe_cm.h  sfe_ipv4.c  sfe_ipv6.c
wave-platform/system/bt/: Android.mk  Makefile.am  configure.ac
wave-platform/system/bt/audio_a2dp_hw/: Makefile.am  audio_a2dp_hw.c  audio_a2dp_hw.h
wave-platform/system/bt/bta/: Makefile.am
wave-platform/system/bt/btcore/: Makefile.am
wave-platform/system/bt/conf/: bt_stack.conf
wave-platform/system/bt/device/: Makefile.am
wave-platform/system/bt/device/include/: interop_database.h
wave-platform/system/bt/device/src/: controller.c
wave-platform/system/bt/hci/: Makefile.am
wave-platform/system/bt/include/: bt_target.h  bt_trace.h  gki_target.h  stack_config.h
wave-platform/system/bt/main/: Makefile.am  bte_init.c  bte_logmsg.c  bte_main.c  stack_config.c
wave-platform/system/bt/osi/: Makefile.am
wave-platform/system/bt/stack/: Makefile.am
wave-platform/system/bt/tools/bdtool/: Makefile.am
wave-platform/system/bt/utils/: Makefile.am
wave-platform/system/bt/utils/include/: bt_utils.h
wave-platform/system/bt/utils/src/: bt_utils.c
wave-platform/system/core/: Makefile.am  configure.ac
wave-platform/system/core/adb/: Makefile.am  adb_main.cpp  adbd.service  file_sync_service.cpp  services.cpp  start_adbd  usb_linux_client.cpp
wave-platform/system/core/base/: Makefile.am
wave-platform/system/core/debuggerd/: Makefile.am  debuggerd.cpp  init_debuggerd.service  start_debuggerd64  tombstone.cpp  utility.h
wave-platform/system/core/include/: Makefile.am
wave-platform/system/core/include/cutils/: klog.h  properties.h  stdatomic.h  trace.h
wave-platform/system/core/leproperties/: Makefile.am  leprop.service  property_service.c  property_service.h
wave-platform/system/core/libbacktrace/: Makefile.am
wave-platform/system/core/libcutils/: Makefile.am  fs_config.c  properties.c  property_ops.h
wave-platform/system/core/liblog/: logd_write_syslog.c
wave-platform/system/core/libmincrypt/: Makefile.am
wave-platform/system/core/libsparse/: Makefile.am  configure.ac
wave-platform/system/core/libsync/: Makefile.am
wave-platform/system/core/libutils/: Makefile.am
wave-platform/system/core/libziparchive/: zip_archive.cc
wave-platform/system/core/logcat/: Makefile.am
wave-platform/system/core/logd/: LogBufferElement.cpp  LogStatistics.h  Makefile.am  logd.service  main.cpp  start_logd
wave-platform/system/core/logwrapper/: Makefile.am
wave-platform/system/core/powerapp/: start_power_config
wave-platform/system/core/rootdir/etc/: init.qcom.post_boot.sh  init_post_boot.service
wave-platform/system/core/usb/: Makefile.am  start_usb  target  usb.service
wave-platform/system/core/usb/compositions/: 901D  9021  9022  9024  9025  902B  902D  9039  9049  904A  9056  9057  9059  905B  9060  9063  9064  9067  9084  9085  9091  90A1  90A9  90AD  90CA  90CD
wave-platform/system/extras/ext4_utils/: make_ext4fs.c  make_ext4fs_main.c
wave-platform/system/media/: Makefile.am  configure.ac
wave-platform/system/media/audio_utils/: Makefile.am
(+900 files in other folders)
