common_sources := BasicHashtable.cpp
#common_sources += CallStack.cpp
common_sources += FileMap.cpp
common_sources += JenkinsHash.cpp
common_sources += LinearTransform.cpp
common_sources += Log.cpp
common_sources += NativeHandle.cpp
common_sources += Printer.cpp
#common_sources += ProcessCallStack.cpp
common_sources += PropertyMap.cpp
common_sources += RefBase.cpp
common_sources += SharedBuffer.cpp
common_sources += Static.cpp
common_sources += StopWatch.cpp
common_sources += String8.cpp
common_sources += String16.cpp
common_sources += SystemClock.cpp
common_sources += Threads.cpp
common_sources += Timers.cpp
common_sources += Tokenizer.cpp
common_sources += Unicode.cpp
common_sources += VectorImpl.cpp
common_sources += misc.cpp

# Build libutils.so
lib_LTLIBRARIES := libutils.la

libutils_la_SOURCES  := $(common_sources)
libutils_la_CPPFLAGS := -I$(top_srcdir)/include
libutils_la_CPPFLAGS += -I$(top_srcdir)/liblog
libutils_la_CPPFLAGS += -DHAVE_PTHREADS
libutils_la_CPPFLAGS += -DLINUX_ENABLED
libutils_la_CPPFLAGS += -D__linux__
libutils_la_CPPFLAGS += -DANDROID_SMP=0
libutils_la_CPPFLAGS += -DDEBUG_REFS_CALLSTACK_ENABLED=0
libutils_la_CPPFLAGS += -std=c++14 -std=gnu++14 -fpermissive

requiredlibs = -lpthread

# Export headers
utilsincdir=$(includedir)/utils
utilsinc_HEADERS := $(top_srcdir)/include/utils/AndroidThreads.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/ashmem.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Atomic.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/BasicHashtable.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/BitSet.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/BlobCache.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/ByteOrder.h
#utilsinc_HEADERS += $(top_srcdir)/include/utils/CallStack.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Compat.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Condition.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Debug.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Endian.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Errors.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/FileMap.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Flattenable.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Functor.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/JenkinsHash.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/KeyedVector.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/LinearTransform.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/List.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Log.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Looper.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/LruCache.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/misc.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Mutex.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/NativeHandle.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Printer.h
#utilsinc_HEADERS += $(top_srcdir)/include/utils/ProcessCallStack.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/PropertyMap.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/RefBase.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/RWLock.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/SharedBuffer.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Singleton.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/SortedVector.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/StopWatch.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/String16.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/String8.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/StrongPointer.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/SystemClock.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/ThreadDefs.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Thread.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/threads.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Timers.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Tokenizer.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Trace.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/TypeHelpers.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Unicode.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/Vector.h
utilsinc_HEADERS += $(top_srcdir)/include/utils/VectorImpl.h

pkgconfigdir := $(libdir)/pkgconfig
pkgconfig_DATA := libutils.pc
EXTRA_DIST := $(pkgconfig_DATA)
